# KruxApp

./: .gitignore  .gitmodules  LICENSE.md  README.md  android_build.sh  android_build_release.sh  buildozer.spec  docker_bash.sh  kruxapp.py  main.py  pyproject.toml  settings.json
mocks/: lcd_mock.py  load_mocks.py  ucryptolib.py
src/krux/: display.py  encryption.py  krux_settings.py  metadata.py  qr.py  settings.py  touch.py  wallet.py
src/krux/pages/: __init__.py  capture_entropy.py  datum_tool.py  login.py  mnemonic_loader.py  qr_capture.py  qr_view.py  settings_page.py  tools.py
src/krux/pages/home_pages/: bip85.py  home.py
src/krux/touchscreens/: ft6x36.py
src/krux/translations/: __init__.py  de.py  es.py  fr.py  ja.py  ko.py  nl.py  pt.py  ru.py  tr.py  vi.py  zh.py
