[tool.poetry]
name = "main"
version = "25.05.beta7"
description = "Krux Android app for learning about Bitcoin air-gapped transactions"
authors = ["Krux Contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://selfcustody.github.io/krux/getting-started/"
repository = "https://github.com/odudex/KruxApp"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kivy = "^2.3.0"
pyqrcode = "^1.2.1"
pyzbar = "^0.1.9"
gestures4kivy = "^0.1.4"
camera4kivy = "^0.3.3"
pycryptodome = "^3.20.0"
pillow = "^10.0.0"
numpy = "^1.24.0"
opencv-python = "^4.11.0.86"
setuptools = "^80.9.0"
cython = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[tool.poetry.group.build.dependencies]
buildozer = "^1.5.0"

[tool.poetry.scripts]
krux = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
